# BlogYourWay

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Procfile  README.md  app.py  pyproject.toml  requirements.txt  robots.txt
.githooks/: pre-commit
app/: __init__.py  cache.py  config.py  logging.py  mongo.py
app/forms/: changelog.py  comments.py  posts.py  projects.py  users.py
app/helpers/: changelog.py  comments.py  posts.py  projects.py  users.py  utils.py
app/models/: changelog.py  comments.py  posts.py  projects.py  users.py
app/static/css/: base.css
app/static/js/: base.js
app/templates/: base.html
app/templates/backstage/: about.html  archive.html  changelog.html  edit-about.html  edit-changelog.html  edit-post.html  edit-project.html  panel.html  posts.html  projects.html  settings.html  theme.html
app/templates/frontstage/: about.html  blog.html  blogpost.html  changelog.html  cover.html  footer.html  gallery.html  home.html  navbar.html  project.html  tag.html
app/templates/main/: 404.html  500.html  landing-page.html  login.html  signup.html  sitemap.xml
app/views/: __init__.py  backstage.py  frontstage.py  main.py
application/: __init__.py  config.py
application/backstage/: utils.py  views.py
application/blog/: utils.py  views.py
application/extensions/: log.py  mongo.py  redis.py  user.py
application/services/: log.py  mongo.py  redis.py  socketio.py
application/static/css/: styles.css
application/templates/: 404.html  500.html  base.html
application/templates/backstage/: archive.html  edit_about.html  edit_blogpost.html  overview.html  panel.html  posts.html  settings.html  social_links.html  theme.html
application/templates/blog/: about.html  blog.html  blogpost.html  home.html  landing_page.html  login.html  navbar.html  post.html  tag.html  (+1 more)
application/utils/: comments.py  common.py  dashboard.py  metrics.py  posts.py  users.py
application/views/: __init__.py  backstage.py  blog.py
blog/: __init__.py  config.py
blog/extensions/: db.py
blogging_gallery/: __init__.py
blogging_gallery/services/: log.py  mongo.py  redis.py  socketio.py
blogging_gallery/templates/: 404.html  500.html
blogging_gallery/utils/: comments.py  common.py  dashboard.py  metrics.py  posts.py  users.py
blogging_gallery/views/: backstage.py  blog.py
blogyourway/: __init__.py  config.py  logging.py
blogyourway/forms/: comments.py  posts.py  users.py
blogyourway/helpers/: articles.py  comments.py  common.py  metrics.py  posts.py  projects.py  users.py  utils.py
blogyourway/models/: comments.py  posts.py  projects.py  users.py
blogyourway/services/: __init__.py  log.py  logging.py  mongo.py  redis.py  socketio.py
blogyourway/tasks/: comments.py  posts.py  projects.py  users.py  utils.py
blogyourway/templates/: 404.html  500.html  base.html  third-parties.html
blogyourway/utils/: comments.py  common.py  dashboard.py  metrics.py  posts.py  users.py
blogyourway/views/: __init__.py  backstage.py  blog.py  frontstage.py  main.py
tests/: run.py  test_blog_utils.py  test_common_utils.py  test_logging.py  test_mongo.py  test_users_utils.py  test_utils_common.py  test_utils_users.py
website/: __init__.py  config.py
website/backstage/: routes.py  utils.py  views.py
website/blog/: routes.py  utils.py  views.py
website/extensions/: db.py  db_mongo.py  db_redis.py  log.py  mongo.py  redis.py
website/templates/: 404.html  500.html  base.html
(+137 files in other folders)
