[tool.poetry]
name = "little-blog"
version = "1.0.0"
description = "A blogging engine, with in-house metric trackers."
authors = ["hank chou <hengtse.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<4"
Flask-Login = "^0.6.2"
bs4 = "^0.0.1"
gunicorn = "^21.2.0"
Markdown = "^3.4.4"
requests = "^2.31.0"
flask = "2.3.2"
werkzeug = "2.3.3"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
readtime = "^3.0.0"
pymongo = "^4.5.0"
markdown-captions = "^2.1.2"
redis = "^5.0.1"
d = "^0.2.2"
flask-caching = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
mongomock = "^4.1.2"
isort = "^5.12.0"
ruff = "^0.0.292"
flask-debugtoolbar = "^0.13.1"

[tool.coverage.run]
omit = [
    "tests/*", 
    "*/__init__.py",
    "*/config.py"
]

[tool.coverage.html]
directory = "coverage_report"

[tool.pytest.ini_options]
addopts = [
    "--cov=application",
    "--cov-report=html"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 92
skip-magic-trailing-comma = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
