[tool.poetry]
name = "BlogYourWay"
version = "1.0.0"
description = "Flask blogging engine with a gallery feature."
authors = ["hank chou <hengtse.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<4"
Flask-Login = "^0.6.2"
bs4 = "^0.0.1"
gunicorn = "^21.2.0"
Markdown = "^3.4.4"
requests = "^2.31.0"
flask = "2.3.2"
werkzeug = "2.3.3"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
readtime = "^3.0.0"
pymongo = "^4.5.0"
markdown-captions = "^2.1.2"
redis = "^5.0.1"
d = "^0.2.2"
flask-caching = "^2.0.2"
flask-socketio = "^5.3.6"
flask-session = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
isort = "^5.12.0"
ruff = "^0.0.292"
flask-debugtoolbar = "^0.13.1"
djlint = "^1.34.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 96
skip-magic-trailing-comma = 1

[tool.ruff]
exclude=["__init__.py"]
line-length = 96

[tool.djlint]
format_js=true
format_css=true
indent=2
ignore="H006,H021"

[tool.djlint.js]
indent_size=2

[tool.djlint.css]
indent_size=2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
